# RAI-0MR---forklift

./: .gitignore  README.md  pyproject.toml
.cache/depthai/crashdumps/1250943b96b8d1dd397271a119b39d917c9f9514/: crash_dump.json
.cache/depthai/crashdumps/679e2b0ef16862f423a03a91dae34a8848f7b103/: crash_dump.json
.cache/depthai/crashdumps/b474d3a2d0552b9f18b7b80477d00f0275c02ce5/: crash_dump.json
.github/workflows/: arduino-ci.yaml
firmware/MiniFork_wifi2.0/: HTML.ino
img/: picture.py
src/: app.py  camera.py  forklift_control.py  forklift_sim.py  localization.py  main.py  path.py  test_camera.py  test_drive.py
src/fw/: MiniFork_wifi2.0.ino
src/pathPlaning_Astar/: AstarPlaner.py  PathMain.py  VisForTesting.py  forklift_sim.py  path_Search.py
src/perception/: __init__.py  threads.py
src/ui/: __init__.py  main_window.py
